--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <div class="container" id="question-section">
             <div class="question">
                 <p id="riddle">Question.</p>
-                <p>What is the largest city in India ?</p>
+                <p>What two words, added together contains most letters?</p>
             </div>
-            <div class="Answer">
+            <div class="answer">
                 <label for="answer">Your Answer:</label>
                 <input type="text" id="answer">
                 <button onclick="checkAnswer()">Submit</button>
             </div>
             <script src="script.js"></script>
-            <p id="correct"></p>
+            <p id="post office"></p>
         </div>
     </center>
 </body>
