--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <p id="riddle">Question.</p>
                 <p>What two words, added together contains most letters?</p>
             </div>
-            <div class="answer">
+            <div class="Answer">
                 <label for="answer">Your Answer:</label>
                 <input type="text" id="answer">
                 <button onclick="checkAnswer()">Submit</button>
             </div>
             <script src="script.js"></script>
-            <p id="post office"></p>
+            <p id="correct"></p>
         </div>
     </center>
 </body>
